migrated the deprecated forkMode parameter to forkCount & reuseForks (http://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html), added memory settings
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595503 13f79535-47bb-0310-9956-ffa450edef68