@@ -726,7 +726,9 @@
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
           </systemPropertyVariables>
-          <forkMode>always</forkMode>
+          <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
           <excludes>
             <exclude>${log4j.skip.test1}</exclude>
             <exclude>${log4j.skip.test2}</exclude>
